# rust-gobblet-gui

./: Cargo.toml  gobblet_gui.js  gobblet_gui_bg.wasm  index.html  sw.js
assets/: manifest.json
src/: app.rs  game_painter.rs  lib.rs  main.rs  style.rs
