[package]
name = "gobblet_gui"
version = "0.1.0"
authors = ["Riku Kanayama (k_kuroguro)"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = "0.21.0"
gobblet = { git = "https://github.com/k-kuroguro/rust-gobblet.git" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
